--- a/package.json
+++ b/package.json
@@ -10,18 +10,25 @@
   },
   "dependencies": {
     "3id-connect": "^1.0.0-alpha.15",
+    "@reach/dialog": "^0.17.0",
     "@self.id/framework": "^0.3.2",
-    "key-did-provider-ed25519": "^2.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-feather": "^2.0.10"
   },
   "devDependencies": {
+    "@ceramicnetwork/http-client": "^2.0.4",
+    "@glazed/devtools": "^0.2.0",
     "autoprefixer": "^10.4.7",
+    "dids": "^3.2.0",
+    "dotenv": "^16.0.1",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "key-did-provider-ed25519": "^2.0.0",
+    "key-did-resolver": "^2.0.4",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.1"
+    "tailwindcss": "^3.1.1",
+    "uint8arrays": "^3.0.0"
   }
 }
