--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,13 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+
+#Hardhat files
+cache
+artifacts
